<resources>
    <string name="app_name">My Weather Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">search..</string>
    <string name="image">image</string>
    <string name="temp">Temperature</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="precipitation">Precipitation</string>
    <string name="visibility">Visibility</string>
    <string name="rate">Rate Me</string>
    <string name="feedback">Feedback and Suggestions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="units">Units</string>

    <string name="api_key">AIzaSyChCWTw0DTEY921pWHdELwKaZKPoAHhGq4</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="km_h">km/h</string>
    <string name="mph">mph</string>
    <string name="degree">degree</string>
    <string name="dir">dir</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="no_internet_please_check_your_connection">No Internet!! Please Check your connection..</string>
    <string name="location">location</string>
    <string name="day">Day</string>
    <string name="weather">Weather</string>
    <string name="max">max</string>
    <string name="min">min</string>
    <string name="windTv">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="chance_of_rain">Chance of rain</string>
    <string name="sunrise">Sunrise</string>
    <string name="weatherTv">Weather</string>
    <string name="city_name">City Name</string>
    <string name="day_and_time">Day and Time</string>
    <string name="dayTv">Day</string>
    <string name="night">Night</string>
    <string name="tempTv">Temp</string>
    <string name="feels_like">Feels like</string>
    <string name="weatherTvValue">Weather</string>
    <string name="today_s_weather_forecast">Today\'s Weather Forecast</string>
    <string name="current_details">Current Details</string>
    <string name="sunriseTv">Sunrise</string>
    <string name="_4_30am">4.30am</string>
    <string name="sunset">Sunset</string>
    <string name="_7_30pm">7.30pm</string>
    <string name="windValueTv">Wind</string>
    <string name="_100km_hr">100km/hr</string>
    <string name="pressureValue">Pressure</string>
    <string name="_1000mbar">1000mBar</string>
    <string name="chance_of_rain_tv">Chance of Rain</string>
    <string name="_5_11_km_hr">5–11 km/hr</string>
    <string name="light">Light</string>
    <string name="windVal">Wind</string>
    <string name="visibilityTv">Visibility</string>
    <string name="uv_index">UV Index</string>
    <string name="please_wait">please_wait</string>
    <string name="_0">0%</string>
    <string name="zero">0</string>
    <string name="_1pm">1pm</string>
    <string name="_12am">12am</string>
    <string name="manage_location">Manage Location</string>
    <string name="current_location">Current Location</string>
    <string name="km">km</string>
    <string name="miles">miles</string>
    <string name="in">in</string>
    <string name="mbar">mBar</string>
    <string name="inch">inch</string>
    <string name="mm">mm</string>
    <string name="celcius">Celsius</string>
    <string name="farenheit">Fahrenheit</string>
    <string name="precipitationVal">Precipitation</string>
    <string name="total_volume">Total Volume:</string>
    <string name="_0mm">0mm</string>
    <string name="time">time</string>
    <string name="_20">20</string>
    <string name="_23">23</string>
    <string name="city_name_tm">City Name</string>
    <string name="date">Date</string>
    <string name="day_tm">Day</string>
    <string name="night_tm">Night</string>
    <string name="weather_tm">Weather</string>
    <string name="current_details_tm">Current Details</string>
    <string name="sunrise_tm">Sunrise</string>
    <string name="_4_30am_tm">4.30am</string>
    <string name="sunset_tm">Sunset</string>
    <string name="_7_30pm_tm">7.30pm</string>
    <string name="wind_tm">Wind</string>
    <string name="_100km_hr_tm">100km/hr</string>
    <string name="pressure_tm">Pressure</string>
    <string name="_1000mbar_tm">1000mBar</string>
    <string name="uv_index_tm">UV Index</string>
    <string name="visibility_tm">Visibility</string>
    <string name="chance_of_rain_tm">Chance of Rain</string>
    <string name="wind_tmrw">Wind</string>
    <string name="light_tm">Light</string>
    <string name="_5_11_km_hr_tm">5–11 km/hr</string>
    <string name="precipitation_tm">Precipitation</string>
    <string name="total_volume_tm">Total Volume:</string>
    <string name="_0mm_tm">0mm</string>
    <string name="redmond">Redmond</string>
</resources>