<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/manage_location"
            android:icon="@drawable/baseline_menu_24"
            android:title="@string/manage_location"/>


        <item
            android:id="@+id/current_location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/current_location"/>

    </group>

    <item
        android:title="@string/units">

        <menu>
            <item
                android:id="@+id/temperature"
                android:icon="@drawable/baseline_heat_pump_24"
                android:title="@string/temp"/>
            <item
                android:id="@+id/wind"
                android:icon="@drawable/baseline_wind_power_24"
                android:title="@string/wind"/>
            <item
                android:id="@+id/pressure"
                android:icon="@drawable/baseline_compress_24"
                android:title="@string/pressure"/>

            <item
                android:id="@+id/precipitation"
                android:icon="@drawable/water_drop"
                android:title="@string/precipitation"/>
            <item
                android:id="@+id/visibility"
                android:icon="@drawable/baseline_visibility_24"
                android:title="@string/visibility"/>

        </menu>


    </item>

    <item
       android:title="">

        <menu>
            <item
                android:id="@+id/rate"
                android:icon="@drawable/baseline_star_rate_24"
                android:title="@string/rate"/>
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/baseline_newspaper_24"
                android:title="@string/feedback"/>
            <item
                android:id="@+id/privacy"
                android:icon="@drawable/baseline_sticky_note_2_24"
                android:title="@string/privacy"/>


        </menu>


    </item>


</menu>