<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <RadioButton
            android:id="@+id/km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_h"/>


        <RadioButton
            android:id="@+id/mph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mph"/>
        <RadioButton
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree"/>

        <RadioButton
            android:id="@+id/dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dir"/>





</LinearLayout>