<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_chance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textStyle="normal"
        android:textSize="13sp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/iv_precipitation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image"
        android:layout_marginStart="7dp"
        android:scaleType="fitXY"
        android:src="@drawable/water_drop_black"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chance"/>


    <TextView
        android:id="@+id/tv_preci_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textStyle="normal"
        android:textSize="12sp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_precipitation"/>



    <TextView
        android:id="@+id/tv_preci_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1pm"
        android:textStyle="normal"
        android:textSize="12sp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="17dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preci_volume"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>