<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_forecast"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

   >

    <View
        android:id="@+id/view_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_above="@id/ll_one"/>

    <LinearLayout
        android:id="@+id/ll_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/weather"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/white"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_toEndOf="@id/ll_one"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/weather_image"
        android:orientation="vertical"
        android:gravity="end"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/min"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_one"/>


    <LinearLayout
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:orientation="vertical"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/windTv"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


                <TextView
                    android:id="@+id/wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="0.2"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="0.2"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/chance_of_rain"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


                <TextView
                    android:id="@+id/rain_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="0.2"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/sunrise"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


                <TextView
                    android:id="@+id/sun_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="0.2"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="@color/white"/>


    </LinearLayout>

</RelativeLayout>