<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SearchFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExercise"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:background="@color/purple_700"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view_search"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_search">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




    <View
        android:id="@+id/view_search_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cl_auto"/>

   <Button
       android:id="@+id/crnt_location_btn"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/background"
       android:text="@string/use_current_location"
       android:visibility="visible"
       android:layout_marginBottom="20dp"
       android:layout_marginEnd="10dp"
       android:layout_marginStart="10dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/view_search_one"/>

    <View
        android:id="@+id/view_search_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="35dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_search_one"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_locations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_search_two"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_no_internet"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/offline"
        android:scaleType="fitXY"
        android:visibility="invisible"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintHorizontal_bias=".5"/>

    <TextView
        android:id="@+id/tv_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="italic"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/no_internet_please_check_your_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".83"
        app:layout_constraintHorizontal_bias=".5"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>